it works, and its fast >:) replaced the python data input with cpointer input

--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -10,7 +10,9 @@
     "import PWBeamformer as pwb\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.signal as sig\n",
-    "import pyus.data.io as dio"
+    "import pyus.data.io as dio\n",
+    "import multiprocessing as mp\n",
+    "import ctypes"
    ]
   },
   {
@@ -118,33 +120,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c 1450 welp...\n",
-      "fnum 2 welp...\n",
-      "points (420470, 3)\n",
-      "trefs (1408,)\n",
-      "refs (1408, 3)\n",
-      "alphas (1408,)\n",
-      "nsamp 12288 welp...\n",
-      "fs 166664000.00000012 welp...\n",
-      "tstart 9.615384615384615e-07 welp...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "166664000.00000012"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# initialize beamformer\n",
     "funcparams = {}\n",
@@ -158,33 +134,23 @@
     "funcparams['fs'] = float(1/Ts)\n",
     "funcparams['tstart'] = float(5/params['f'])\n",
     "\n",
-    "for (k, v) in funcparams.items():\n",
-    "    try:\n",
-    "        print(k, v.shape)\n",
-    "    except Exception as e:\n",
-    "        print(k, v, \"welp...\")\n",
-    "\n",
-    "funcparams['fs']"
+    "bmfrm = pwb.PWBeamformer(**funcparams)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initializing a PWBeamformer...\n",
-      "  Formatting input parameters...\n",
-      "    Generating masks\n",
-      "    Generating Transmission Tabs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bmfrm = pwb.PWBeamformer(**funcparams)"
+    "# Formatting data as shared ctypes\n",
+    "rf_contig = []\n",
+    "for indr in range(numrot):\n",
+    "    rfslice = rf[:,:,0,indr]\n",
+    "    for ind in range(rf.shape[2]-1):\n",
+    "        rfslice = np.concatenate((rfslice, rf[:,:,ind+1,indr]), axis = 1)\n",
+    "    rfslice = np.ascontiguousarray(rfslice.T, dtype=ctypes.c_float).ctypes.data_as(ctypes.POINTER(ctypes.c_float))\n",
+    "    rf_contig.append(rfslice)"
    ]
   },
   {
@@ -198,290 +164,20 @@
      "text": [
       "Slicing data\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(12288, 1408)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(\"Slicing data\")\n",
-    "rfslice = rf[:,:,0,17]\n",
-    "for ind in range(rf.shape[2]-1):\n",
-    "    rfslice = np.concatenate((rfslice, rf[:,:,ind+1,17]), axis = 1)\n",
-    "rfslice.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    Generating masks\n"
-     ]
-    }
-   ],
-   "source": [
-    "bmfrm.__init_masks__()\n",
-    "bmfrmparams = pwb.__BMFRM_PARAMS__[bmfrm.id]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Slicing data\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Beamforming...\n",
-      "Beamforming\n",
-      "  Copying data...\n",
-      "  Starting pool...\n",
-      "    Pool active\n",
-      "  Summing results...\n",
-      "Finished with it\n"
-     ]
     }
    ],
    "source": [
     "print(\"Slicing data\")\n",
     "allsummed = []\n",
     "for inda in range(numrot):\n",
-    "    rfslice = rf[:,:,0,inda]\n",
-    "    for ind in range(rf.shape[2]-1):\n",
-    "        rfslice = np.concatenate((rfslice, rf[:,:,ind+1,inda]), axis = 1)\n",
-    "    print(\"Beamforming...\")\n",
-    "    summed = bmfrm(rfslice).reshape((len(zgrid), len(xgrid)), order='f')\n",
-    "    allsummed.append(summed)\n",
-    "print(\"Finished with it\")"
+    "    rfpointer = rf_contig[inda]\n",
+    "    summed = bmfrm(rfpointer).reshape((len(zgrid), len(xgrid)), order='f')\n",
+    "    allsummed.append(summed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
