--- a/examples/test_notebook.ipynb
+++ b/examples/test_notebook.ipynb
@@ -4,10 +4,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "dynamic module does not define module export function (PyInit__trig)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mbmfrmtrig\u001b[39;00m \u001b[39mimport\u001b[39;00m PWBeamformer\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mscipy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39msignal\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msig\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/envs/beamformer/lib/python3.10/site-packages/bmfrmtrig/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mbmfrmtrig\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtrig\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mbmfrmtrig\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mBeamformer\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mbmfrmtrig\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mPWBeamformer\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/envs/beamformer/lib/python3.10/site-packages/bmfrmtrig/trig/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mbmfrmtrig\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtrig\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtrig\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n",
+      "File \u001b[0;32m~/miniconda3/envs/beamformer/lib/python3.10/site-packages/bmfrmtrig/trig/trig.py:17\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mctypes\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m# # determine the OS\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39m# if _pltfm.uname()[0] == \"Windows\":\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m#     name = \"./_trig.dll\"\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     14\u001b[0m \n\u001b[1;32m     15\u001b[0m \u001b[39m#_trig =  ctypes.CDLL(bmfrmtrig.trig._trig)\u001b[39;00m\n\u001b[0;32m---> 17\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mbmfrmtrig\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtrig\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m_trig\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[39m# c function definitions inputs and outputs\u001b[39;00m\n\u001b[1;32m     20\u001b[0m _trig\u001b[39m.\u001b[39mpwtxengine\u001b[39m.\u001b[39margtypes \u001b[39m=\u001b[39m (\n\u001b[1;32m     21\u001b[0m     ctypes\u001b[39m.\u001b[39mc_int, ctypes\u001b[39m.\u001b[39mc_float, ctypes\u001b[39m.\u001b[39mc_float, ctypes\u001b[39m.\u001b[39mPOINTER(ctypes\u001b[39m.\u001b[39mc_float), \n\u001b[1;32m     22\u001b[0m     ctypes\u001b[39m.\u001b[39mPOINTER(ctypes\u001b[39m.\u001b[39mc_float), ctypes\u001b[39m.\u001b[39mPOINTER(ctypes\u001b[39m.\u001b[39mc_float), ctypes\u001b[39m.\u001b[39mPOINTER(ctypes\u001b[39m.\u001b[39mc_float)\n\u001b[1;32m     23\u001b[0m )\n",
+      "\u001b[0;31mImportError\u001b[0m: dynamic module does not define module export function (PyInit__trig)"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "import PWBeamformer as pwb\n",
+    "from bmfrmtrig import PWBeamformer\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.signal as sig\n",
     "import pyus.data.io as dio\n",
@@ -17,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +49,7 @@
    "source": [
     "# Load file\n",
     "print(\"Reading file\")\n",
-    "filedir = \"/datacommons/ultrasound/TIMuscle/Phantoms/20230208_developmentrf/acq_wire/\"\n",
+    "filedir = \"../../data/20230208_developmentrf/acq_wire/\"\n",
     "filename = \"20230208_153318694\"\n",
     "\n",
     "params = dio.loadmat(filename=filename+\"_RF\", filedir=filedir)\n",
@@ -118,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
